--- a/train_generator.ipynb
+++ b/train_generator.ipynb
@@ -9,8 +9,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\amany\\appdata\\local\\conda\\conda\\envs\\gputf3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -27,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dg = DataGen()\n",
+    "dg = DataGen(data=\"data_shuffled.txt\")\n",
     "\n",
     "n_features = len(char2int)\n",
     "n_steps_in = dg.max_root_len\n",
@@ -38,8 +36,17 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "729859.2\n"
+     ]
+    }
+   ],
    "source": [
+    "print(len(dg.words) * .7)\n",
     "batch_size = 128\n",
     "n_batches = int(len(dg.words) * .7 / batch_size) \n",
     "gen = dg.gen2(batch_size=batch_size, n_batches=n_batches)\n",
@@ -49,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define model \n",
     "# train, infenc, infdec = seq2(n_features, n_features, 64, dg.word_feat_len)\n",
-    "train, infenc, infdec = conv_model(n_features, n_features, dg.word_feat_len, 64, 64)\n",
+    "train, infenc, infdec = conv_model(n_features, n_features, dg.word_feat_len, 64, 256)\n",
     "train.compile(optimizer='adam', loss='categorical_crossentropy')\n",
     "\n",
     "# tensorboard = TensorBoard(log_dir='logs')"
@@ -63,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,30 +82,30 @@
       "==================================================================================================\n",
       "root_word_input (InputLayer)    (None, 15, 28, 1)    0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "conv2d_5 (Conv2D)               (None, 15, 28, 20)   520         root_word_input[0][0]            \n",
+      "conv2d_1 (Conv2D)               (None, 15, 28, 20)   520         root_word_input[0][0]            \n",
       "__________________________________________________________________________________________________\n",
-      "max_pooling2d_5 (MaxPooling2D)  (None, 5, 9, 20)     0           conv2d_5[0][0]                   \n",
+      "max_pooling2d_1 (MaxPooling2D)  (None, 5, 9, 20)     0           conv2d_1[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "flatten_5 (Flatten)             (None, 900)          0           max_pooling2d_5[0][0]            \n",
+      "flatten_1 (Flatten)             (None, 900)          0           max_pooling2d_1[0][0]            \n",
       "__________________________________________________________________________________________________\n",
       "word_feature_input (InputLayer) (None, 32)           0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "dense_5 (Dense)                 (None, 54)           48654       flatten_5[0][0]                  \n",
+      "dense_1 (Dense)                 (None, 246)          221646      flatten_1[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
       "feature_output (Dense)          (None, 10)           330         word_feature_input[0][0]         \n",
       "__________________________________________________________________________________________________\n",
       "target_word_input (InputLayer)  (None, None, 28)     0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_5 (Concatenate)     (None, 64)           0           dense_5[0][0]                    \n",
+      "concatenate_1 (Concatenate)     (None, 256)          0           dense_1[0][0]                    \n",
       "                                                                 feature_output[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "decoder_gru (GRU)               [(None, None, 64), ( 17856       target_word_input[0][0]          \n",
-      "                                                                 concatenate_5[0][0]              \n",
+      "decoder_gru (GRU)               [(None, None, 256),  218880      target_word_input[0][0]          \n",
+      "                                                                 concatenate_1[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "train_output (Dense)            (None, None, 28)     1820        decoder_gru[0][0]                \n",
+      "train_output (Dense)            (None, None, 28)     7196        decoder_gru[0][0]                \n",
       "==================================================================================================\n",
-      "Total params: 69,180\n",
-      "Trainable params: 69,180\n",
+      "Total params: 448,572\n",
+      "Trainable params: 448,572\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -110,28 +117,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "5702/5702 [==============================] - 375s 66ms/step - loss: 0.0934\n",
+      "Epoch 2/2\n",
+      "5702/5702 [==============================] - 371s 65ms/step - loss: 0.0104\n"
+     ]
+    }
+   ],
    "source": [
-    "history = train.fit_generator(gen, steps_per_epoch=n_batches, epochs = 2, callbacks=[tensorboard])"
+    "history = train.fit_generator(gen, steps_per_epoch=n_batches, epochs = 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_n_batches, test_batch_size = 300, 100 \n",
+    "test_n_batches, test_batch_size = 30, 100 \n",
     "test_gen = dg.gen2(batch_size=test_batch_size, n_batches=test_n_batches, trainset=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 matay           matayiyogaa&                    matayiyogaa&                   \n",
+      "1 sal             salissiyaro&                    salissiyaro&                   \n",
+      "2 maaret          maaretaro&                      maaretirora&                   \n",
+      "3 yedd            yeddaanaagoo&                   yeddaanaagoo&                  \n",
+      "4 cagg            cagissidori&                    cagissidori&                   \n",
+      "5 achch           achchissiyonaa&                 achchissiyonaa&                \n",
+      "6 homppat         homppatiyonii&                  homppatiyo&                    \n",
+      "7 paall           paallogeetoo&                   paallidogeetoo&                \n",
+      "8 baxx            baxissennee&                    baxissennee&                   \n",
+      "9 warqqall        warqqalliis&                    warqqalliis&                   \n",
+      "10 daadir          daadira&                        daadira&                       \n",
+      "11 paatt           paatissibeokkonaa&              paatissibeokkonaa&             \n",
+      "12 qoom            qoomekkee&                      qoomekka&                      \n",
+      "13 een             eenawsu&                        eenawsu&                       \n",
+      "14 leebbaashet     leebbaashetiyogee&              leebbaashetiyogee&             \n",
+      "15 gombb           gombbokkona&                    gombbokkona&                   \n",
+      "16 konkkom         konkkomiyogaa&                  konkkomiyogaa&                 \n",
+      "17 kobay           kobayiyagee&                    kobayiyagee&                   \n",
+      "18 kanddot         kanddotiyori&                   kanddotiyori&                  \n",
+      "19 cuul            cuuladee&                       cuuladee&                      \n",
+      "20 hayzz           hayzzi&                         hayzzi&                        \n",
+      "21 tafitaf         tafitafidanaa&                  tafitafidanaa&                 \n",
+      "22 wocam           wocamada&                       wocamada&                      \n",
+      "23 xurumbb         xurumbissona&                   xurumbissona&                  \n",
+      "24 makkis          makkisissiyagaa&                makkisissiyagaa&               \n",
+      "25 xal             xalidageetee&                   xalidageetee&                  \n",
+      "26 hekkul''        hekkul''eeta&                   hekkul''eeta&                  \n",
+      "27 mugg            mugissana&                      mugissana&                     \n",
+      "28 cingg           cinggori&                       cinggodori&                    \n",
+      "29 sham            shamoro&                        shamidoro&                     \n",
+      "Word Similarity Average: 0.96%\n",
+      "Exact Accuracy: 78.50%\n",
+      "Word in Accuracy: 79.30%\n"
+     ]
+    }
+   ],
    "source": [
     "total, correct = 0, 0\n",
     "in_word = 0\n",
@@ -190,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
