--- a/data_gen.ipynb
+++ b/data_gen.ipynb
@@ -12,22 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "class DataGen:\n",
     "\n",
-    "    def __init__(self, reverse=False, *args, **kwargs):\n",
+    "    def __init__(self, reverse=False, data=\"data_shuffled.txt\", *args, **kwargs):\n",
     "        if reverse:\n",
-    "            self.roots, self.words, self.featArray, mr, mw, n_features = get_reverse_feature_array()\n",
+    "            self.roots, self.words, self.featArray, mr, mw, n_features = get_reverse_feature_array(data)\n",
     "            self.n_features = n_features\n",
     "            self.pred_feat_shapes = []\n",
     "            for feat in self.featArray[0]:\n",
     "                self.pred_feat_shapes.append(len(feat))\n",
     "        else:\n",
-    "            self.roots, self.words, self.featArray, mr, mw = get_feature_array()\n",
+    "            self.roots, self.words, self.featArray, mr, mw = get_feature_array(data)\n",
     "            self.word_feat_len = len(self.featArray[0])\n",
     "        self.n_chars = len(char2int)\n",
     "        self.max_root_len = mr\n",
@@ -260,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
